package seedu.address.model.tutorial;

import java.util.List;

public record Attendance(String studentName, List<Integer> attendance) {
}
